force-app/main/default/objects/CGD_Sub_Contract__c/CGD_Sub_Contract__c.object-meta.xml
<CustomObject>
    <description>BSA各航線/月份目標值</description>
    <label>Sub-Contract</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>