force-app/main/default/objects/CGD_Sub_Contract__c/fields/Actual_Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Actual_Chargeable_Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Chargeable Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>