force-app/main/default/objects/CGD_Sub_Contract__c/fields/Actual_Chargeable_Weight_Ach__c.field-meta.xml
<CustomField>
    <fullName>Actual_Chargeable_Weight_Ach__c</fullName>
    <description>BSA 與 Incentive計算不同</description>
    <formula>IF(RecordType.DeveloperName=&apos;Sub_Contract_Block_Space_Agreement&apos;, 
Round(Actual_Chargeable_Weight__c / Tonnage_Monthly__c,3),
Round(Actual_Chargeable_Weight__c / Tonnage_Yearly__c,3)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Chargeable Weight / Ach.</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>