force-app/main/default/objects/CGD_Sub_Contract__c/fields/All_in_Rate__c.field-meta.xml
<CustomField>
    <fullName>All_in_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All in Rate</label>
    <type>Checkbox</type>
</CustomField>