force-app/main/default/objects/CGD_Sub_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>CGD_Contract__c</referenceTo>
    <relationshipLabel>Sub-Contracts</relationshipLabel>
    <relationshipName>Sub_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>