force-app/main/default/objects/CGD_Sub_Contract__c/fields/Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport__c</fullName>
    <description>目的地 機場</description>
    <inlineHelpText>目的地 機場</inlineHelpText>
    <label>Destination Airport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Airport_Code</valueSetName>
    </valueSet>
</CustomField>