force-app/main/default/objects/CGD_Sub_Contract__c/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <description>目的地 國家</description>
    <inlineHelpText>目的地 國家</inlineHelpText>
    <label>Destination Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Country</valueSetName>
    </valueSet>
</CustomField>