force-app/main/default/objects/CGD_Sub_Contract__c/fields/Destination_TC_Area__c.field-meta.xml
<CustomField>
    <fullName>Destination_TC_Area__c</fullName>
    <description>目的地 地域</description>
    <label>Destination - TC Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_TC_Area</valueSetName>
    </valueSet>
</CustomField>