force-app/main/default/objects/CGD_Sub_Contract__c/fields/Fuel_Surcharge_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_Per_Kg__c</fullName>
    <description>燃油附加費用 / kg</description>
    <inlineHelpText>kg</inlineHelpText>
    <label>Fuel Surcharge / Per Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>