force-app/main/default/objects/CGD_Sub_Contract__c/fields/Incentive_Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Origin_Airport__c</fullName>
    <description>For Calculate</description>
    <label>Incentive Origin Airport</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>