force-app/main/default/objects/CGD_Sub_Contract__c/fields/Not_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Not_Achieved__c</fullName>
    <description>When the actual achievement rate falls short of the target achievement rate by more than 1%, a notification will be triggered.</description>
    <formula>IF(
  AND(
    TEXT(Target_Year__c) = TEXT(YEAR(TODAY())),
    TEXT(Target_Month__c) = TEXT(MONTH(TODAY())),
    (Up_to_Date_Tonnage_Ach__c - Actual_Chargeable_Weight_Ach__c) &gt; 0.01
  ),
  OR(
    TODAY() = DATE(VALUE(TEXT(Target_Year__c)), VALUE(TEXT(Target_Month__c)), 16),
    TODAY() = (DATE(VALUE(TEXT(Target_Year__c)), VALUE(TEXT(Target_Month__c)) + 1, 1) - 1 - 7),
    AND(
      TODAY() &gt;= (DATE(VALUE(TEXT(Target_Year__c)), VALUE(TEXT(Target_Month__c)) + 1, 1) - 1 - 5),
      TODAY() &lt;= (DATE(VALUE(TEXT(Target_Year__c)), VALUE(TEXT(Target_Month__c)) + 1, 1) - 1)
    )
  ),
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Achieved</label>
    <type>Checkbox</type>
</CustomField>