force-app/main/default/objects/CGD_Sub_Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sub-Contracts</relationshipLabel>
    <relationshipName>Sub_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>