force-app/main/default/objects/CGD_Sub_Contract__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <description>起運地 機場</description>
    <label>Origin Airport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Airport_Code</valueSetName>
    </valueSet>
</CustomField>