force-app/main/default/objects/CGD_Sub_Contract__c/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <description>起運地 國家</description>
    <inlineHelpText>起運地 國家</inlineHelpText>
    <label>Origin Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Country</valueSetName>
    </valueSet>
</CustomField>