force-app/main/default/objects/CGD_Sub_Contract__c/fields/Origin_TC_Area__c.field-meta.xml
<CustomField>
    <fullName>Origin_TC_Area__c</fullName>
    <description>起運地 地域</description>
    <inlineHelpText>起運地 地域</inlineHelpText>
    <label>Origin - TC Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_TC_Area</valueSetName>
    </valueSet>
</CustomField>