force-app/main/default/objects/CGD_Sub_Contract__c/fields/RateReport__c.field-meta.xml
<CustomField>
    <fullName>RateReport__c</fullName>
    <description>單價</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>