force-app/main/default/objects/CGD_Sub_Contract__c/fields/Security_Surcharge_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Security_Surcharge_Per_Kg__c</fullName>
    <description>兵險附加費用 /kg</description>
    <inlineHelpText>kg</inlineHelpText>
    <label>Security Surcharge / Per Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>