force-app/main/default/objects/CGD_Sub_Contract__c/fields/Tonnage_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_Monthly__c</fullName>
    <description>合約目標月噸數</description>
    <inlineHelpText>合約目標月噸數</inlineHelpText>
    <label>Tonnage - Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>