force-app/main/default/objects/CGD_Sub_Contract__c/fields/Tonnage_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_Yearly__c</fullName>
    <label>Tonnage - Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>