force-app/main/default/objects/CGD_Sub_Contract__c/fields/Up_to_Date_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Up_to_Date_Tonnage__c</fullName>
    <description>合約預估噸數</description>
    <formula>IF(
  YEAR(TODAY()) &gt; VALUE(TEXT(Target_Year__c)),
    Tonnage_Monthly__c,
  IF(
    AND(YEAR(TODAY()) = VALUE(TEXT(Target_Year__c)), MONTH(TODAY()) &gt; VALUE(TEXT(Target_Month__c))),
      Tonnage_Monthly__c,
  IF(
    AND(YEAR(TODAY()) = VALUE(TEXT(Target_Year__c)), MONTH(TODAY()) = VALUE(TEXT(Target_Month__c))),
    /* 進入同年同月，依月份天數計算 */
      Tonnage_Monthly__c / 
      (
        CASE(
          VALUE(TEXT(Target_Month__c)),
          1, 31,
          3, 31,
          5, 31,
          7, 31,
          8, 31,
          10, 31,
          12, 31,
          4, 30,
          6, 30,
          9, 30,
          11, 30,
          2, /* 2月特殊處理 */
            IF(
              MOD(VALUE(TEXT(Target_Year__c)), 400) = 0,
                29,
              IF(
                MOD(VALUE(TEXT(Target_Year__c)), 100) = 0,
                  28,
                IF(
                  MOD(VALUE(TEXT(Target_Year__c)), 4) = 0,
                    29,
                  28
                )
              )
            ),
          /* default */
          30
        )
      ) * DAY(TODAY()),
    0
  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up to Date Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>