force-app/main/default/objects/CGD_Sub_Contract__c/fields/Up_to_Date_Tonnage_Ach__c.field-meta.xml
<CustomField>
    <fullName>Up_to_Date_Tonnage_Ach__c</fullName>
    <formula>IF(Up_to_Date_Tonnage__c=0 || Tonnage_Monthly__c=0,0,
Round(Up_to_Date_Tonnage__c / Tonnage_Monthly__c,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up to Date Tonnage / Ach.</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>