force-app/main/default/objects/CGD_Sub_Contract__c/fields/Up_to_Month_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Up_to_Month_Tonnage__c</fullName>
    <formula>IF(
  YEAR(TODAY()) &gt; VALUE(TEXT(Target_Year__c)),
    Tonnage_Yearly__c,
  IF(
    YEAR(TODAY()) = VALUE(TEXT(Target_Year__c)),
      Tonnage_Yearly__c / 12 * MONTH(TODAY()),
    0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up to Month Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>