force-app/main/default/objects/CGD_Sub_Contract__c/fields/Via_Point__c.field-meta.xml
<CustomField>
    <fullName>Via_Point__c</fullName>
    <label>Via Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Airport_Code</valueSetName>
    </valueSet>
</CustomField>