force-app/main/default/objects/CGD_Sub_Contract__c/recordTypes/Sub_Contract_Block_Space_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Sub_Contract_Block_Space_Agreement</fullName>
    <active>true</active>
    <description>Sub-Contract - BSA</description>
    <label>Sub-Contract - Block Space Agreement</label>
</RecordType>