force-app/main/default/objects/CGD_Sub_Contract__c/recordTypes/Sub_Contract_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Sub_Contract_Incentive</fullName>
    <active>true</active>
    <description>Sub-Contract - Incentive</description>
    <label>Sub-Contract - Incentive</label>
</RecordType>